[Fix] small fixes